--- a/Aula 3/exercicio4/PedroLopes-21849/index.html
+++ b/Aula 3/exercicio4/PedroLopes-21849/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <title>Exercicio </title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    <div class="content">
-            <button onclick="addImage()"> AdicionarImagem</button>
-            <button> Remover Imagem</button>
+<div class="content">
+    <button onclick="addImage()">Adicionar Imagem</button>
+    <button>Remover Imagem</button>
 
-            <h1>Imagens:</h1> <h1 id="imageCounter"> 0 </h1>
+    <h1>Imagens: <span id="imageCounter"> 0 </span>
 
-            <div id="imagesList"></div>
-    </div>
-        <script src="script.js"></script>
-
+        <div id="imagesList"></div>
+</div>
 </body>
 </html>
